...
    return Scaffold(
      appBar: AppBar(
        leading: IconButton(
          icon: const Icon(Icons.close),
          onPressed: widget.onClose ?? () => context.pop(),
        ),
        title: const Text('Review & Edit'),
        actions: [
          BlocBuilder<OCRReviewCubit, OCRReviewState>(
            builder: (context, state) {
              final isValid = state.maybeWhen(
                initialized: (dTitle, dComposer, conf, image, eTitle, eComposer,
                        eNotes, tags, isValid, errors, isSubmitting, error) =>
                    isValid,
                orElse: () => false,
              );
              return TextButton(
                onPressed: !isValid ? null : widget.onSubmit,
                child: const Text('Use These Values'),
              );
            },
          ),
        ],
        elevation: 0,
      ),
...
                  ? null
                  : () {
                      widget.onAddTag(_newTag);
                      _newTag = '';
                    },
              icon: const Icon(Icons.add),
              label: const Text('Add'),
            ),
          ],
        ),
        if (widget.tags.isNotEmpty) ...[
          const SizedBox(height: 12),
          Wrap(
...
