...
  'Carl Philipp Emanuel Bach': 'Wq. ',
  'Johann Christian Bach': 'W. ',

  // Viennese Classical
  'Wolfgang Amadeus Mozart': 'K. ',
  'Joseph Haydn': 'Hob. ',
  'Ludwig van Beethoven': 'Op. ',

  // Romantic Era
  'Franz Schubert': 'D. ',
  'Robert Schumann': 'Op. ',
  'Frédéric Chopin': 'Op. ',
  'Franz Liszt': 'S. ',
...
